--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^6.15.10",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-    "@sanity/client": "^6.15.10"
   }
 }
